admin url to get flagged prompts
